--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .olvide-mi-contrasea,
 .recordar-datos {
   margin: 0;
@@ -197,12 +202,8 @@
   width: 32.9px;
 }
 body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+
+  /* min-height: 100vh; */
   background-color: var(--colors-neutral-white);
   font-size: var(--font-size-mini);
   color: var(--color-mediumseagreen);
@@ -210,25 +211,10 @@ body {
 }
 
 .login {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh; /* Занимает 100% высоты экрана */
-  overflow: hidden;
-  text-align: left;
-  flex-direction: row;
-}
-
-.login1 {
   background-color: var(--colors-neutral-white);
-  width: 360px;
-  max-width: 100%;
+  height: 100vh;
+  width: 100%;
   overflow: hidden;
-  flex-shrink: 0;
-  text-align: left;
-  padding: 20px; /* Добавьте отступы для внутреннего контента */
-  box-sizing: border-box;
 }
 
 @media screen and (max-width: 420px) {
@@ -237,18 +223,14 @@ body {
     align-items: stretch;
     justify-content: flex-start;
   }
-  
-  .login1 {
-    width: 100%;
-    max-width: none;
-  }
+
 }
 
 .show-password-toggle {
   position: absolute;
   top: 50%;
   right: 10px;
-  transform: translateY(calc(50% - 24px)); 
+  transform: translateY(calc(50% - 24px));
   width: 25px;
   height: 25px;
   display: flex;
@@ -268,7 +250,7 @@ body {
   opacity: 1;
 }
 .show-password-toggle.active img {
-  content: url('./public/eye.svg'); 
+  content: url("./public/eye.svg");
 }
 /* Стили для всплывающего окна */
 .popup {
@@ -280,11 +262,11 @@ body {
   background-color: white;
   padding: 20px;
   border: 1px solid #ccc;
-  border-radius: 10px; 
+  border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
   width: calc(100% - 40px); /* Расширение по ширине с отступами */
-  max-width: 400px; 
+  max-width: 400px;
 }
 
 .popup-content {
@@ -303,17 +285,17 @@ body {
   font-weight: bold;
   font-size: 24px;
   margin-bottom: 5px;
-  color: #001533
+  color: #001533;
 }
 
 .popup-message {
   font-size: 16px;
   margin-bottom: 15px;
-  color: #001533
+  color: #001533;
 }
 
 .popup-button {
-  background-color: #00A24F;
+  background-color: #00a24f;
   color: white;
   border: none;
   padding: 10px 20px;
