--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ html {
   padding: 1% 5%;
   border: 1px solid #d9d9d9;
   background: white;
+  color: black;
   font-size: 2vh;
 }
 /* .input-field,
@@ -272,6 +273,66 @@ html {
 .forget-form-btn:disabled {
   background: #eceeed;
 }
+
 .openup {
   top: 200% !important;
+}
+
+/* Затемненный фон */
+.modal {
+  display: none; /* Скрыто по умолчанию */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  align-items: center;
+  justify-content: center;
+}
+
+/* Содержимое модального окна */
+.modal-content {
+  position: relative;
+  margin: auto;
+  padding: 20px;
+  width: 80%;
+  max-height: 50vh;
+  background-color: white;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2%;
+  text-align: center;
+}
+
+/* Кнопка закрыть */
+.close {
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  font-size: 28px;
+  cursor: pointer;
+}
+.popup-icon {
+  width: 25vw;
+}
+.popup-text {
+  margin-top: 2vh;
+  font-size: 2.5vh;
+}
+.popup-message {
+  margin-top: 0.5vh;
+  font-size: 2vh;
+}
+.popup-button {
+  width: 100%;
+  border: none;
+  margin-top: 1.2vh;
+  font-size: 2vh;
+  color: white;
+  background: #00a24f;
+  border-radius: 5px;
+  padding: 1.2vh;
 }
