--- a/style.css
+++ b/style.css
@@ -15,8 +15,24 @@ html {
   color: #001533;
   max-width: 500px;
   margin: 0 auto;
-}
 
+}
+.load-screen {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100;
+  background-color: #00a24f;
+  display: flex;
+  align-items: center;
+  left: 0;
+  top: 0;
+  justify-content: center;
+  transition: 1.3s left;
+}
+.load-screen-off{
+  left: -100%;
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -370,4 +386,58 @@ html {
   border-radius: 5px;
   padding: 4% 5%;
   margin-top: 3%;
+}
+
+.loader-wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.12);
+}
+
+.loader {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: absolute;
+  overflow: hidden;
+  background-color: rgba(214, 214, 214, 0.5);
+}
+
+.loader-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 45%;
+  height: auto;
+}
+
+.loader-circle {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 5px solid transparent;
+  border-top-color: blue;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
