--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ html {
   align-items: center;
   width: 100%;
   margin-bottom: 0.5em;
-  gap: 1vw;
+  gap: 1.2vw;
   height: 100%;
   max-height: calc(70% / 5);
 }
@@ -208,7 +208,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 4vw;
+  gap: 5vw;
   font-size: 2vh;
 }
 .social-separator {
@@ -322,10 +322,13 @@ html {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 200;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   align-items: center;
   justify-content: center;
+  opacity: 0; /* начальное состояние */
+  transition: opacity 0.3s ease-in-out; /* добавляем плавный переход */
 }
 
 /* Содержимое модального окна */
@@ -336,7 +339,7 @@ html {
   width: 80%;
   max-height: 50vh;
   background-color: white;
-  border-radius: 5px;
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
