--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ html {
 .container {
   display: flex;
   flex-direction: column;
+  min-height: 610px;
   height: 100vh;
   /* overflow: hidden; */
   position: relative;
@@ -376,6 +377,8 @@ html {
   border-radius: 5px;
   padding: 1.2vh;
 }
+
+
 .permiso {
   text-align: center;
 }
@@ -477,4 +480,23 @@ height: 7%;
 .green-border,
 .focus-green-border:focus {
   border: 2px solid green !important;
+}
+.btn-active{
+  transition: background-color 0.3s ease, transform 0.3s ease; /* Добавим анимацию */
+}
+/* Изменение цвета при наведении */
+.btn-active:hover {
+  background-color: #05a845;
+}
+
+/* Эффект "нажатия" при клике */
+.btn-active:active {
+  background-color: #038d36;
+  transform: scale(0.97); /* немного уменьшим размер */
+}
+
+/* Эффект фокуса при навигации с клавиатуры или клике */
+.btn-activen:focus {
+  outline: none; /* убираем стандартный outline */
+  box-shadow: 0 0 0 3px rgba(6, 189, 81, 0.3); /* добавляем свой */
 }
